--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+.grey{
+    color: #918E9B;
+}
+
+.bi-star-fill{
+    color: red;
+}
+
 .custom-head{
     height: 70px;
     background: #FFFFFF;
@@ -9,47 +17,25 @@
     right: 0.01%;
 }
 
-.grey{
-    color: #918E9B;
-}
-
-.rating-span{
-    font-style: normal;
-    font-weight: 300;
-    font-size: 13px;
-    line-height: 110%;
-}
-
-.custom-p{
-    font-style: normal;
-    font-weight: 300;
-    font-size: 13px;
-    line-height: 110%;
-}
-
-.price-p{
-    font-style: normal;
-    font-weight: 600;
-    font-size: 13px;
-    line-height: 110%;
-}
-
-.bi-star{
-    color: red;
-}
-
-.custom-img{
-    width: 176px;
-    height: 235px;
-}
-
 .custom-card{
-    width: 176px;
-    border: 0;
+    width: 320px;
+    font-size: 15px;
+}
+
+.custom-card-img{
+    height: 317px;
+    width: 319px;
 }
 
 @media (max-width: 768px) {
     .prof-pic{
         max-width: 450px;
+    }
+}
+
+@media (min-width: 1550px) {
+    .flex-container{
+        display: flex;
+        flex-direction: row;
     }
 }
